# tempmail

./: Cargo.toml
src/: lib.rs  main  main.rs
src/server/: imap_server.rs  mod.rs  smtp_server.rs
src/storage/: email_storage.rs  mod.rs
src/utils/: dkim.rs  mod.rs  rate_limiter.rs  utils.rs
