[package]
name = "tempmail"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
chrono = "0.4"
rand = "0.8"
async-std = "1.12.0"
mailparse = "0.16.0"
dkim = "0.1.1"
rsa = "0.7.2"
governor = "0.5.1"
reqwest = "0.11.18"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.44"
dashmap = "5.0"
